testing/errors/obsolete4.a
	!subzone {	; -> ""!subzone {}" is obsolete; use "!zone {}" instead."
	}
